# miden-project-environment

./: .gitignore  Cargo.toml  README.md  miden-client.toml  miden-project.toml  miden-workspace.toml
contracts/counter-account/: Cargo.toml  counter.rs
contracts/counter-account/wit/: counter.wit
contracts/increment-note/: Cargo.toml  increment_count.rs
helpers/: Cargo.toml  helpers.rs
integration/: Cargo.toml
integration/src/: helpers.rs
integration/tests/: counter_test.rs
scripts/: Cargo.toml  increment_count.rs
src/: helpers.rs  lib.rs
tests/: Cargo.toml  counter_test.rs
tests/tests/: counter_test.rs
