[workspace]
members = [
    "contracts/counter-account",
    "contracts/increment-note",
    "helpers",
    "scripts",
    "tests"
]
resolver = "2"
edition = "2021"

[workspace.dependencies]
miden = { version = "0.6" }
cargo-miden = { git = "https://github.com/0xMiden/compiler.git", branch = "next", package = "cargo-miden" }
miden-client = { version = "0.11", features = ["tonic", "sqlite"] }
miden-lib = { version = "0.11" }
miden-objects = { version = "0.11", default-features = false, features = ["testing"] }
miden-crypto = { version = "0.18", features = ["executable"] }
miden-core = { version = "0.18" }
miden-mast-package = { version = "0.17.1", default_features = false }
tokio = { version = "1.40", features = ["rt-multi-thread", "net", "macros", "fs"] }
rand = { version = "0.9" }
helpers = { path = "helpers" }
scripts = { path = "scripts" }
tests = { path = "tests" }