[package]
name = "integration"
version = "0.1.0"
edition = "2021"

[dependencies]
miden = { workspace = true }
cargo-miden = { git = "https://github.com/0xMiden/compiler.git", branch = "next", package = "cargo-miden" }
miden-client = { version = "0.11", features = ["tonic", "sqlite"] }
miden-lib = { version = "0.11" }
miden-objects = { version = "0.11", default-features = false, features = ["testing"] }
miden-crypto = { version = "0.18", features = ["executable"] }
miden-core = { version = "0.18" }
miden-testing = "0.11"
miden-mast-package = { version = "0.17.1", default_features = false }
tokio = { version = "1.40", features = ["rt-multi-thread", "net", "macros", "fs"] }
rand = { version = "0.9" }
anyhow = "1.0"