[package]
name = "tests"
version = "0.1.0"
edition = "2021"

[dependencies]
miden-client = { workspace = true }
miden-core = { workspace = true }
miden-mast-package = { workspace = true }
miden-objects = { workspace = true }
rand = { workspace = true }
helpers = { workspace = true }
tokio = { workspace = true }
anyhow = "1.0"